py.install_sources(
    'homset.py',
    'filtered_modules_with_basis.py',
    'modules_with_basis.py',
    'finitely_generated_lie_conformal_algebras.py',
    'bialgebras.py',
    'lambda_bracket_algebras_with_basis.py',
    'tutorial.py',
    'highest_weight_crystals.py',
    'signed_tensor.py',
    'principal_ideal_domains.py',
    'matrix_algebras.py',
    'additive_semigroups.py',
    'graded_bialgebras.py',
    'groups.py',
    'partially_ordered_monoids.py',
    'commutative_additive_groups.py',
    'algebra_modules.py',
    'loop_crystals.py',
    'additive_monoids.py',
    'g_sets.py',
    'semirings.py',
    'regular_crystals.py',
    'realizations.py',
    'finite_dimensional_coalgebras_with_basis.py',
    'dual.py',
    'graded_modules_with_basis.py',
    'sets_with_partial_maps.py',
    'lie_groups.py',
    'semisimple_algebras.py',
    'magmas_and_additive_magmas.py',
    'graphs.py',
    'category_types.py',
    'sets_with_grading.py',
    'complex_reflection_groups.py',
    'topological_spaces.py',
    'coalgebras_with_basis.py',
    'finite_fields.py',
    'isomorphic_objects.py',
    'right_modules.py',
    'finite_dimensional_modules_with_basis.py',
    'algebras.py',
    'associative_algebras.py',
    'coxeter_group_algebras.py',
    'hopf_algebras_with_basis.py',
    'distributive_magmas_and_additive_magmas.py',
    'algebra_ideals.py',
    'simplicial_complexes.py',
    'algebras_with_basis.py',
    'additive_groups.py',
    'super_hopf_algebras_with_basis.py',
    'graded_algebras.py',
    'hecke_modules.py',
    'j_trivial_semigroups.py',
    'finite_dimensional_lie_algebras_with_basis.py',
    'finite_weyl_groups.py',
    'complex_reflection_or_generalized_coxeter_groups.py',
    'triangular_kac_moody_algebras.py',
    'function_fields.py',
    'supercommutative_algebras.py',
    'schemes.py',
    'lie_algebras_with_basis.py',
    'modules.py',
    'groupoid.py',
    'graded_bialgebras_with_basis.py',
    'super_modules.py',
    'poor_man_map.py',
    'finite_dimensional_algebras_with_basis.py',
    'vector_bundles.py',
    'finite_dimensional_semisimple_algebras_with_basis.py',
    'commutative_additive_semigroups.py',
    'unital_algebras.py',
    'finite_dimensional_bialgebras_with_basis.py',
    'graded_algebras_with_basis.py',
    'integral_domains.py',
    'magmas.py',
    'modular_abelian_varieties.py',
    'unique_factorization_domains.py',
    'monoids.py',
    'quotient_fields.py',
    'commutative_algebra_ideals.py',
    'all.py',
    'monoid_algebras.py',
    'additive_magmas.py',
    'graded_modules.py',
    'filtered_algebras_with_basis.py',
    'finite_lattice_posets.py',
    'category.py',
    'all__sagemath_objects.py',
    'finite_groups.py',
    'commutative_algebras.py',
    'discrete_valuation.py',
    'commutative_rings.py',
    'graded_lie_algebras.py',
    'group_algebras.py',
    'covariant_functorial_construction.py',
    'bialgebras_with_basis.py',
    'simplicial_sets.py',
    'filtered_hopf_algebras_with_basis.py',
    'commutative_additive_monoids.py',
    'subobjects.py',
    'coxeter_groups.py',
    'pointed_sets.py',
    'weyl_groups.py',
    'super_algebras.py',
    'super_algebras_with_basis.py',
    'homsets.py',
    'with_realizations.py',
    'semigroups.py',
    'category_with_axiom.py',
    'supercrystals.py',
    'finitely_generated_semigroups.py',
    'aperiodic_semigroups.py',
    'bimodules.py',
    'primer.py',
    'basic.py',
    'regular_supercrystals.py',
    'classical_crystals.py',
    'finite_dimensional_graded_lie_algebras_with_basis.py',
    'posets.py',
    'finitely_generated_lambda_bracket_algebras.py',
    'algebra_functor.py',
    'finite_monoids.py',
    'drinfeld_modules.py',
    'finite_semigroups.py',
    'graded_hopf_algebras_with_basis.py',
    'finite_sets.py',
    'permutation_groups.py',
    'enumerated_sets.py',
    'finite_dimensional_nilpotent_lie_algebras_with_basis.py',
    'generalized_coxeter_groups.py',
    'super_modules_with_basis.py',
    'finite_crystals.py',
    'lambda_bracket_algebras.py',
    'vector_spaces.py',
    'tensor.py',
    'lie_conformal_algebras_with_basis.py',
    'polyhedra.py',
    'lie_conformal_algebras.py',
    'infinite_enumerated_sets.py',
    'ring_ideals.py',
    'lattice_posets.py',
    'l_trivial_semigroups.py',
    'pushout.py',
    'number_fields.py',
    'finite_coxeter_groups.py',
    'division_rings.py',
    'cw_complexes.py',
    'finite_enumerated_sets.py',
    'fields.py',
    'filtered_algebras.py',
    'lie_algebras.py',
    'shephard_groups.py',
    'chain_complexes.py',
    'finite_dimensional_hopf_algebras_with_basis.py',
    'graded_lie_algebras_with_basis.py',
    'affine_weyl_groups.py',
    'cartesian_product.py',
    'kac_moody_algebras.py',
    'magmatic_algebras.py',
    'quantum_group_representations.py',
    'finitely_generated_magmas.py',
    'facade_sets.py',
    'crystals.py',
    'hopf_algebras.py',
    'finite_posets.py',
    'super_lie_conformal_algebras.py',
    'commutative_ring_ideals.py',
    'graded_lie_conformal_algebras.py',
    'objects.py',
    'graded_coalgebras_with_basis.py',
    'finite_permutation_groups.py',
    'coalgebras.py',
    'complete_discrete_valuation.py',
    'r_trivial_semigroups.py',
    'subquotients.py',
    'finite_complex_reflection_groups.py',
    'h_trivial_semigroups.py',
    'graded_hopf_algebras.py',
    'metric_spaces.py',
    'quotients.py',
    'filtered_modules.py',
    'domains.py',
    'rings.py',
    'left_modules.py',
    'sets_cat.py',
    'graded_coalgebras.py',
    'euclidean_domains.py',
    'manifolds.py',
    'rngs.py',
    'gcd_domains.py',
    subdir: 'sage/categories',
)

py.extension_module(
    'category_singleton.pyx',
    'functor.pyx',
    'category_cy_helper.pyx',
    'morphism.pyx',
    'coercion_methods.pyx',
    'map.pyx',
    'action.pyx',
    subdir: 'sage/categories',
    install: true,
    include_directories: [inc_cpython],
    dependencies: [py_dep],
)
