py.install_sources(
  '__init__.py',
  'action.pxd',
  'additive_groups.py',
  'additive_magmas.py',
  'additive_monoids.py',
  'additive_semigroups.py',
  'affine_weyl_groups.py',
  'algebra_functor.py',
  'algebra_ideals.py',
  'algebra_modules.py',
  'algebras.py',
  'algebras_with_basis.py',
  'all.py',
  'all__sagemath_objects.py',
  'aperiodic_semigroups.py',
  'associative_algebras.py',
  'basic.py',
  'bialgebras.py',
  'bialgebras_with_basis.py',
  'bimodules.py',
  'cartesian_product.py',
  'category.py',
  'category_cy_helper.pxd',
  'category_singleton.pxd',
  'category_types.py',
  'category_with_axiom.py',
  'chain_complexes.py',
  'classical_crystals.py',
  'coalgebras.py',
  'coalgebras_with_basis.py',
  'commutative_additive_groups.py',
  'commutative_additive_monoids.py',
  'commutative_additive_semigroups.py',
  'commutative_algebra_ideals.py',
  'commutative_algebras.py',
  'commutative_ring_ideals.py',
  'commutative_rings.py',
  'complete_discrete_valuation.py',
  'complex_reflection_groups.py',
  'complex_reflection_or_generalized_coxeter_groups.py',
  'covariant_functorial_construction.py',
  'coxeter_group_algebras.py',
  'coxeter_groups.py',
  'crystals.py',
  'cw_complexes.py',
  'dedekind_domains.py',
  'discrete_valuation.py',
  'distributive_magmas_and_additive_magmas.py',
  'division_rings.py',
  'domains.py',
  'drinfeld_modules.py',
  'dual.py',
  'enumerated_sets.py',
  'euclidean_domains.py',
  'facade_sets.py',
  'fields.py',
  'filtered_algebras.py',
  'filtered_algebras_with_basis.py',
  'filtered_hopf_algebras_with_basis.py',
  'filtered_modules.py',
  'filtered_modules_with_basis.py',
  'finite_complex_reflection_groups.py',
  'finite_coxeter_groups.py',
  'finite_crystals.py',
  'finite_dimensional_algebras_with_basis.py',
  'finite_dimensional_bialgebras_with_basis.py',
  'finite_dimensional_coalgebras_with_basis.py',
  'finite_dimensional_graded_lie_algebras_with_basis.py',
  'finite_dimensional_hopf_algebras_with_basis.py',
  'finite_dimensional_lie_algebras_with_basis.py',
  'finite_dimensional_modules_with_basis.py',
  'finite_dimensional_nilpotent_lie_algebras_with_basis.py',
  'finite_dimensional_semisimple_algebras_with_basis.py',
  'finite_enumerated_sets.py',
  'finite_fields.py',
  'finite_groups.py',
  'finite_lattice_posets.py',
  'finite_monoids.py',
  'finite_permutation_groups.py',
  'finite_posets.py',
  'finite_semigroups.py',
  'finite_sets.py',
  'finite_weyl_groups.py',
  'finitely_generated_lambda_bracket_algebras.py',
  'finitely_generated_lie_conformal_algebras.py',
  'finitely_generated_magmas.py',
  'finitely_generated_semigroups.py',
  'function_fields.py',
  'functor.pxd',
  'g_sets.py',
  'gcd_domains.py',
  'generalized_coxeter_groups.py',
  'graded_algebras.py',
  'graded_algebras_with_basis.py',
  'graded_bialgebras.py',
  'graded_bialgebras_with_basis.py',
  'graded_coalgebras.py',
  'graded_coalgebras_with_basis.py',
  'graded_hopf_algebras.py',
  'graded_hopf_algebras_with_basis.py',
  'graded_lie_algebras.py',
  'graded_lie_algebras_with_basis.py',
  'graded_lie_conformal_algebras.py',
  'graded_modules.py',
  'graded_modules_with_basis.py',
  'graphs.py',
  'group_algebras.py',
  'groupoid.py',
  'groups.py',
  'h_trivial_semigroups.py',
  'hecke_modules.py',
  'highest_weight_crystals.py',
  'homset.py',
  'homsets.py',
  'hopf_algebras.py',
  'hopf_algebras_with_basis.py',
  'infinite_enumerated_sets.py',
  'integral_domains.py',
  'isomorphic_objects.py',
  'j_trivial_semigroups.py',
  'kac_moody_algebras.py',
  'l_trivial_semigroups.py',
  'lambda_bracket_algebras.py',
  'lambda_bracket_algebras_with_basis.py',
  'lattice_posets.py',
  'left_modules.py',
  'lie_algebras.py',
  'lie_algebras_with_basis.py',
  'lie_conformal_algebras.py',
  'lie_conformal_algebras_with_basis.py',
  'lie_groups.py',
  'loop_crystals.py',
  'magmas.py',
  'magmas_and_additive_magmas.py',
  'magmatic_algebras.py',
  'manifolds.py',
  'map.pxd',
  'matrix_algebras.py',
  'metric_spaces.py',
  'modular_abelian_varieties.py',
  'modules.py',
  'modules_with_basis.py',
  'monoid_algebras.py',
  'monoids.py',
  'morphism.pxd',
  'noetherian_rings.py',
  'number_fields.py',
  'objects.py',
  'partially_ordered_monoids.py',
  'permutation_groups.py',
  'pointed_sets.py',
  'polyhedra.py',
  'poor_man_map.py',
  'posets.py',
  'primer.py',
  'principal_ideal_domains.py',
  'pushout.py',
  'quantum_group_representations.py',
  'quotient_fields.py',
  'quotients.py',
  'r_trivial_semigroups.py',
  'realizations.py',
  'regular_crystals.py',
  'regular_supercrystals.py',
  'right_modules.py',
  'ring_ideals.py',
  'rings.py',
  'rngs.py',
  'schemes.py',
  'semigroups.py',
  'semirings.py',
  'semisimple_algebras.py',
  'sets_cat.py',
  'sets_with_grading.py',
  'sets_with_partial_maps.py',
  'shephard_groups.py',
  'signed_tensor.py',
  'simplicial_complexes.py',
  'simplicial_sets.py',
  'subobjects.py',
  'subquotients.py',
  'super_algebras.py',
  'super_algebras_with_basis.py',
  'super_hopf_algebras_with_basis.py',
  'super_lie_conformal_algebras.py',
  'super_modules.py',
  'super_modules_with_basis.py',
  'supercommutative_algebras.py',
  'supercrystals.py',
  'tensor.py',
  'topological_spaces.py',
  'triangular_kac_moody_algebras.py',
  'tutorial.py',
  'unique_factorization_domains.py',
  'unital_algebras.py',
  'vector_bundles.py',
  'vector_spaces.py',
  'weyl_groups.py',
  'with_realizations.py',
  subdir: 'sage/categories',
)

extension_data = {
  'action' : files('action.pyx'),
  'category_cy_helper' : files('category_cy_helper.pyx'),
  'category_singleton' : files('category_singleton.pyx'),
  'coercion_methods' : files('coercion_methods.pyx'),
  'functor' : files('functor.pyx'),
  'map' : files('map.pyx'),
  'morphism' : files('morphism.pyx'),
}

foreach name, pyx : extension_data
  py.extension_module(
    name,
    sources: pyx,
    subdir: 'sage/categories',
    install: true,
    include_directories: [inc_cpython, inc_ext],
    dependencies: [py_dep, gmp],
  )
endforeach

subdir('examples')
