py.install_sources(
  'SJT.py',
  '__init__.py',
  'abstract_tree.py',
  'affine_permutation.py',
  'algebraic_combinatorics.py',
  'all.py',
  'alternating_sign_matrix.py',
  'backtrack.py',
  'baxter_permutations.py',
  'bijectionist.py',
  'binary_recurrence_sequences.py',
  'binary_tree.py',
  'blob_algebra.py',
  'cartesian_product.py',
  'catalog_partitions.py',
  'cluster_complex.py',
  'colored_permutations.py',
  'combinat.py',
  'combinat_cython.pxd',
  'combination.py',
  'combinatorial_map.py',
  'composition.py',
  'composition_signed.py',
  'composition_tableau.py',
  'constellation.py',
  'core.py',
  'counting.py',
  'cyclic_sieving_phenomenon.py',
  'decorated_permutation.py',
  'derangements.py',
  'descent_algebra.py',
  'diagram.py',
  'diagram_algebras.py',
  'dlx.py',
  'dyck_word.py',
  'e_one_star.py',
  'enumerated_sets.py',
  'enumeration_mod_permgroup.pxd',
  'family.py',
  'finite_state_machine.py',
  'finite_state_machine_generators.py',
  'fqsym.py',
  'free_dendriform_algebra.py',
  'free_module.py',
  'free_prelie_algebra.py',
  'fully_commutative_elements.py',
  'fully_packed_loop.py',
  'gelfand_tsetlin_patterns.py',
  'graph_path.py',
  'gray_codes.py',
  'grossman_larson_algebras.py',
  'growth.py',
  'hall_polynomial.py',
  'hillman_grassl.py',
  'integer_matrices.py',
  'integer_vector.py',
  'integer_vector_weighted.py',
  'integer_vectors_mod_permgroup.py',
  'interval_posets.py',
  'k_tableau.py',
  'kazhdan_lusztig.py',
  'key_polynomial.py',
  'knutson_tao_puzzles.py',
  'lr_tableau.py',
  'misc.py',
  'multiset_partition_into_sets_ordered.py',
  'necklace.py',
  'non_decreasing_parking_function.py',
  'nu_dyck_word.py',
  'nu_tamari_lattice.py',
  'ordered_tree.py',
  'output.py',
  'parallelogram_polyomino.py',
  'parking_functions.py',
  'partition.py',
  'partition_algebra.py',
  'partition_kleshchev.py',
  'partition_shifting_algebras.py',
  'partition_tuple.py',
  'perfect_matching.py',
  'permutation.py',
  'permutation_cython.pxd',
  'plane_partition.py',
  'q_analogues.py',
  'quickref.py',
  'ranker.py',
  'recognizable_series.py',
  'regular_sequence.py',
  'restricted_growth.py',
  'ribbon.py',
  'ribbon_shaped_tableau.py',
  'ribbon_tableau.py',
  'rooted_tree.py',
  'rsk.py',
  'schubert_polynomial.py',
  'set_partition.py',
  'set_partition_ordered.py',
  'shard_order.py',
  'shifted_primed_tableau.py',
  'shuffle.py',
  'sidon_sets.py',
  'similarity_class_type.py',
  'sine_gordon.py',
  'six_vertex_model.py',
  'skew_partition.py',
  'skew_tableau.py',
  'sloane_functions.py',
  'specht_module.py',
  'subset.py',
  'subsets_hereditary.py',
  'subsets_pairwise.py',
  'subword.py',
  'subword_complex.py',
  'super_tableau.py',
  'superpartition.py',
  'symmetric_group_algebra.py',
  'symmetric_group_representations.py',
  't_sequences.py',
  'tableau.py',
  'tableau_residues.py',
  'tableau_tuple.py',
  'tamari_lattices.py',
  'tiling.py',
  'tools.py',
  'triangles_FHM.py',
  'tuple.py',
  'tutorial.py',
  'vector_partition.py',
  'yang_baxter_graph.py',
  subdir: 'sage/combinat',
)

extension_data = {
  'combinat_cython' : files('combinat_cython.pyx'),
  'debruijn_sequence' : files('debruijn_sequence.pyx'),
  'degree_sequences' : files('degree_sequences.pyx'),
  'enumeration_mod_permgroup' : files('enumeration_mod_permgroup.pyx'),
  'expnums' : files('expnums.pyx'),
  'fast_vector_partitions' : files('fast_vector_partitions.pyx'),
  'partitions' : files('partitions.pyx'),
  'permutation_cython' : files('permutation_cython.pyx'),
  'q_bernoulli' : files('q_bernoulli.pyx'),
  'set_partition_iterator' : files('set_partition_iterator.pyx'),
  'subword_complex_c' : files('subword_complex_c.pyx'),
}

foreach name, pyx : extension_data
  deps = [py_dep, cysignals, gmp]
  if name == 'enumeration_mod_permgroup'
    deps += [gap]
  endif

  py.extension_module(
    name,
    sources: pyx,
    subdir: 'sage/combinat',
    install: true,
    include_directories: [inc_cpython, inc_data_structures, inc_rings],
    dependencies: deps,
  )
endforeach

install_subdir('chas', install_dir: sage_install_dir / 'combinat')
install_subdir(
  'cluster_algebra_quiver',
  install_dir: sage_install_dir / 'combinat',
)
subdir('crystals')
subdir('designs')
subdir('integer_lists')
subdir('matrices')
install_subdir('ncsf_qsym', install_dir: sage_install_dir / 'combinat')
install_subdir('ncsym', install_dir: sage_install_dir / 'combinat')
install_subdir('path_tableaux', install_dir: sage_install_dir / 'combinat')
subdir('posets')
subdir('rigged_configurations')
subdir('root_system')
install_subdir('sf', install_dir: sage_install_dir / 'combinat')
install_subdir('species', install_dir: sage_install_dir / 'combinat')
subdir('words')
